<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_description"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".features.propertyDescription.DescriptionActivity"
    tools:ignore="UnusedIds">

    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="17dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/description_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:lines="2"
                android:textStyle="bold"
                />

            <CheckBox
                android:id="@+id/addToFavorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/star_selector" />

        </LinearLayout>

        <HorizontalScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="97dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/transparent_rectangle"
            android:fillViewport="true"
            android:measureAllChildren="true"
            tools:ignore="UnusedIds"
            >

            <LinearLayout
                android:id="@+id/imgs"
                          android:layout_width="wrap_content"
                          android:layout_height="97dp"
                android:orientation="horizontal"
                          >
            </LinearLayout>
    </HorizontalScrollView>

        <TextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginBottom="15dp"
            android:text="@string/text_title"
            android:textStyle="bold"
            tools:ignore="UnusedIds" />

        <TextView
            android:id="@+id/description_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            tools:ignore="UnusedIds" />

        <Button
            android:id="@+id/contactRequestButton"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="10dp"
            android:onClick="confirmContactRequest"
            android:text="@string/button_contact_request" />

        <Button
            android:id="@+id/action_launch_panorama"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/button_text"
            android:textAllCaps="false"
            android:textSize="20sp" />
    </LinearLayout>
</RelativeLayout>
