<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="10dp"
    tools:context=".features.propertylist.ListActivity"
    tools:ignore="UnusedIds">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider"
        android:showDividers="middle">

        <ImageButton
            android:id="@+id/logOutButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/colorBackground"
            android:contentDescription="@string/LogOut"
            android:src="@drawable/logout"
            />

        <ToggleButton
            android:id="@+id/FavoritesButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:background="@color/colorBackground"
            android:drawableTop="@drawable/star_selector"
            />

        <ImageButton
            android:id="@+id/filterButtonPopUp"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@color/colorBackground"
            android:contentDescription="@string/Filter"
            android:src="@drawable/filter" />
    </LinearLayout>

    <ListView
        android:id="@+id/houseList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/colorBackground"
        android:dividerHeight="6dp"
        android:listSelector="@drawable/item_selector"
        />

</LinearLayout>

