...
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            >


            <Button
                android:id="@+id/goto_login_button"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="60dp"
                android:onClick="proceedToLogin"
                android:text="@string/action_login"
                />

            <Button

                android:id="@+id/goto_registration_button"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:onClick="proceedToRegistration"
                android:text="@string/action_goto_registration" />

    </LinearLayout>
...
