<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".features.propertylist.ListActivity"
    tools:ignore="UnusedResources"
    tools:showIn="@layout/activity_list">

    <ListView
        android:id="@+id/houseList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</android.support.v4.widget.NestedScrollView>
