...
    <string name="action_goto_registration">Register</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password" tools:ignore="UnusedResources">This password is incorrect</string>
    <string name="error_field_required" tools:ignore="UnusedResources">This field is required</string>
    <string name="error_login_unsuccessful">Error when logging in, try again.</string>
    <string name="permission_rationale" tools:ignore="UnusedResources">Contacts permissions are needed for providing
        email completions.
    </string>
    <string name="info_login_successful">Login successful</string>

    <!-- Strings related to registering -->
...
    <string name="error_empty_field">Please fill in all fields</string>
    <string name="error_unmatching_passwords">Entered passwords don\'t match</string>
    <string name="error_registration_unsuccessful">An error occurred when registering, please make
        sure you have access to the network and try again</string>
    <string name="info_registration_successful">Registration was successful, you may log in</string>
    <string name="title_activity_register">Register</string>
    <string name="error_user_already_exists">Account already exists for this username.</string>

    <!-- Strings related to 3D debugging -->
    <string name="debug_camera_rotation" translatable="false">CamRX=%1$.2f CamRY=%2$.2f CamRZ=%3$.2f</string>
    <string name="debug_sensor_rotation" translatable="false">SenRX=%1$.2f SenRY=%2$.2f SenRZ=%3$.2f</string>

    <!-- Strings related to Logout -->
...
